--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-sharp": "^2.5.2",
+    "intersection-observer": "^0.10.0",
     "prop-types": "^15.7.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
